14-Microservices-with-AppMesh/14-03-Microservices-Canary-Deployments-with-AppMesh/kube-manifests/V2-Microservices-AppMesh-Canary-Deployment/09-virtual-service-notification-microservice.yml
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: notification-v1.microservices.svc.cluster.local
  namespace: microservices
spec:
  meshName: appmesh
  virtualRouter:
    name: notification-virtual-router
    listeners:
      - portMapping:
          port: 8096
          protocol: http
  routes:
    - name: notification-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: notification-v1
              weight: 50
            - virtualNodeName: notification-v2
              weight: 50
